# vld

./: .gitignore  CMakeLists.txt
cmake/: BuildForWinXP.cmake  FindDbgHelp.cmake
src/: CMakeLists.txt  callstack.cpp  callstack.h  dbghelp.h  dllspatches.cpp  ntapi.cpp  ntapi.h  utility.cpp  vld.cpp  vld_hooks.cpp  vldint.h
